Change some api terms and make get swabs work
